--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
-    "gsap": "^3.12.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-gsap": "^3.2.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "swiper": "^11.1.15",
     "web-vitals": "^4.2.4"
   },
